--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "prettier": "^2.3.1",
     "react": "^17.0.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.0",
     "react-palette": "^1.0.2",
     "styled-components": "^5.3.0"
