--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "prettier": "^2.3.1",
-    "react": "^17.0.0",
+    "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.0",
     "react-palette": "^1.0.2",
+    "react-query": "^3.17.2",
+    "react-query-devtools": "^2.6.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
