--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "axios": "^0.21.1",
+    "color": "^3.1.3",
     "framer-motion": "^4.1.17",
     "prettier": "^2.3.1",
     "react": "^17.0.2",
@@ -18,9 +19,11 @@
     "react-palette": "^1.0.2",
     "react-query": "^3.17.2",
     "react-query-devtools": "^2.6.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "zustand": "^3.5.4"
   },
   "devDependencies": {
+    "@types/color": "^3.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.10",
