--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "react-palette": "^1.0.2",
     "react-query": "^3.17.2",
     "react-query-devtools": "^2.6.3",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "zustand": "^3.5.4"
   },
   "devDependencies": {
     "@types/color": "^3.0.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.3",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.10",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
+    "typescript": "^4.3.5",
     "vite": "^2.3.7"
   }
 }
