--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
+    "chakra-ui-autocomplete": "^1.4.2",
     "color": "^3.1.3",
     "framer-motion": "^4.1.17",
     "prettier": "^2.3.1",
@@ -20,6 +23,7 @@
     "react-query": "^3.17.2",
     "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.0",
+    "react-virtualized": "^9.22.3",
     "styled-components": "^5.3.0",
     "zustand": "^3.5.4"
   },
@@ -30,6 +34,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-virtualized": "^9.21.12",
     "@types/styled-components": "^5.1.10",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.3.5",
