--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "version": "0.0.0",
+  "homepage": "https://turbonater.github.io/pokedex/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.4",
@@ -15,6 +18,7 @@
     "chakra-ui-autocomplete": "^1.4.2",
     "color": "^3.1.3",
     "framer-motion": "^4.1.17",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.3.1",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
